--- a/app/views/comments/new.js.erb
+++ b/app/views/comments/new.js.erb
@@ -1,3 +1,3 @@
 $("<%= escape_javascript render(:file => 'comments/new.html.erb') %>").insertAfter('#comments');
-$('form#new_comment').slideDown('slow');
+$('#new_comment').slideDown('slow');
 $('#new_comment_link').hide();
