--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 }
 
 body { 
-  background-color: #fff; 
+   
   color: #333;
 }
 
@@ -56,7 +56,7 @@ a:hover {
 }
 
 #header {
-  font-family:"Myriad Web Pro",Helvetica,Arial,sans-serif;
+  font-family:verdana;
   letter-spacing: 1px;
   border-bottom: 5px solid #333333;
   color:#333333;
