--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #fff;
+  background-image: url('body-bg.jpg');
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -67,3 +67,4 @@ div {
     list-style: square;
   }
 }
+
