--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -67,4 +67,10 @@ div {
     list-style: square;
   }
 }
-
+.article {
+  border: 1px solid black;
+  margin: 12px 0px;
+  padding: 3px 6px;
+  box-shadow: 3px 3px 3px #888888;
+  border-radius:3px;
+}
