--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -68,7 +68,8 @@ div {
   }
 }
 .article {
-  border: 1px solid black;
+  background-color: white;
+  border: 1px solid rgb(233, 205, 205);
   margin: 12px 0px;
   padding: 3px 6px;
   box-shadow: 3px 3px 3px #888888;
